Added docs + removed code smells